--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 </head>
 <body>
-	<header class="header">
+	<!-- <header class="header">
 		<div class="header__container container">
 			<nav class="header__navigation">
 				<a class="header__logo link" href="./index.html"> <span class="header__logo-span logo-span">Web</span>Studio</a>
@@ -49,7 +49,7 @@
 				</li>
 			</ul>
 		</div>
-	</header>
+	</header> -->
 	<main>
 		<section class="hero">
 			<div class="hero__container container">
@@ -254,7 +254,7 @@
 						<div class="team__item">
 							<img class="team__photo" src="./images/img4.jpg" alt="Михайло Єрмаков" width="270">
 							<h3 class="team__names">Михайло Єрмаков</h3>
-							<p class="team__position" lang="en">Designer</p>
+							<p class="team__position" lang="en">UI Designer</p>
 							<ul class="team__soc-list">
 								<li class="team__soc-item">
 									<a class="team__soc-link" href="">
@@ -351,7 +351,7 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<div class="footer__container container">
+		<!-- <div class="footer__container container">
 			<div class="footer__contact">
 				<a class="footer__logo link" href="/"><span class="footer__logo-span">Web</span>Studio</a>
 				<address>
@@ -413,7 +413,7 @@
 					</button>
 				</form>
 			</div>
-		</div>
+		</div> -->
 	</footer>
 	<div class="backdrop is-hidden" data-modal>
 		<div class="modal">
