--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+	<footer class="footer">
 		<div class="footer__container container">
 			<div class="footer__contact">
 				<a class="footer__logo link" href="/"><span class="footer__logo-span">Web</span>Studio</a>
@@ -222,7 +222,7 @@
 				<p class="subscription__title">Підпишіться на розсилку</p>
 				<form class="subscription__form" name="subscription-form" autocomplete="on">
 					<label for="subscription-email">
-						<input class="subscription__input" type="email" name="email" placeholder="E-mail" id="subscription-email"/>
+						<div class="subscription-email"><input class="subscription__input" type="email" name="email" placeholder="E-mail" id="subscription-email"/></div >
 					</label>
 					<button class="subscription__btn" type="submit">Підписатися
 						<svg class="icon-send" width="24" height="24">
