--- a/index.html
+++ b/index.html
@@ -49,14 +49,58 @@
 				</li>
 			</ul>
 		</div>
+		<div class="menu-open" data-menu-open>
 			<svg class="icon-menu_24px" width="24" height="16">
 				<use href="./images/symbol-defs.svg#icon-menu_24px">
 				</use>
 			</svg>
-			<svg class="icon-close_24px" width="24" height="16">
-				<use href="./images/symbol-defs.svg#icon-close_24px">
-				</use>
-			</svg>
+		</div >
+		<div class="menu-close is-hidden" data-menu>
+			<div class="menu-close__btn" data-menu-close>
+					<svg class="icon-close_24px" width="24" height="16">
+						<use href="./images/symbol-defs.svg#icon-close_24px">
+						</use>
+					</svg>
+			</div >
+			<div class="menu-close__container">
+				<ul class="menu-close__list list">
+						<li class="menu-close__list-item">
+							<a class="menu-close__link link menu-close__current-page" href="./index.html">Студія</a>
+						</li>
+						<li class="menu-close__list-item">
+							<a class="menu-close__link link" href="./portfolio.html">Портфоліо</a>   
+						</li>
+						<li  class="menu-close__list-item">
+							<a class="menu-close__link link" href="">Контакти</a>    
+						</li>
+					</ul>
+				</nav>
+				<ul class="menu-close__contact-list list">
+					<li class="menu-close__contact-items">
+						<a class="menu-close__link-tel link" href="tel:+380961111111">+38 096 111 11 11
+						</a>
+					</li>
+					<li class="menu-close__contact-items">
+						<a class="menu-close__link-email link" href="mailto:info@devstudio.com">info@devstudio.com
+						</a>
+					</li>
+				</ul>
+				<ul class="menu-close__soc-list">
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Instagram</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Twitter</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Facebook</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">LinkedIn</a>
+					</li>
+				</ul>
+			</di >
+		</div >
 	</header>
 	<main>
 		<section class="hero">
@@ -149,7 +193,18 @@
 				<ul class="team__list list">
 					<li class="team__addlist">
 						<div class="team__item">
-							<img class="team__photo" src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+							<picture>
+								<source
+									srcset="./images/Demyanenko.jpg 1x, ./images/Demyanenko-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/Demyanenko-tab.jpg 1x, ./images/Demyanenko-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/Demyanenko-tel.jpg 1x,./images/Demyanenko-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img class="team__photo" src="./images/Demyanenko-tel-2x.jpg" alt="Ігор Дем'яненко" width="450">
+							</picture>
 							<h3 class="team__names">Ігор Дем'яненко</h3> 
 							<p class="team__position" lang="en">Product Designer</p>
 							<ul class="team__soc-list">
@@ -190,7 +245,18 @@
 					</li>
 					<li class="team__addlist">
 						<div class="team__item">
-							<img class="team__photo" src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
+							<picture>
+								<source
+									srcset="./images/Repina.jpg 1x, ./images/Repina-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/Repina-tab.jpg 1x, ./images/Repina-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/Repina-tel.jpg 1x,./images/Repina-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img class="team__photo" src="./images/Repina-tel-2x.jpg" alt="Ольга Рєпіна" width="450">
+							</picture>
 							<h3 class="team__names">Ольга Рєпіна</h3>
 							<p class="team__position" lang="en">Frontend Developer</p>
 							<ul class="team__soc-list">
@@ -231,7 +297,18 @@
 					</li>
 					<li class="team__addlist">
 						<div class="team__item">
-							<img class="team__photo" src="./images/img3.jpg" alt="Микола Тарасов" width="270" height="260">
+							<picture>
+								<source
+									srcset="./images/Tarasov.jpg 1x, ./images/Tarasov-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/Tarasov-tab.jpg 1x, ./images/Tarasov-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/Tarasov-tel.jpg 1x,./images/Tarasov-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img class="team__photo" src="./images/Tarasov-tel-2x.jpg" alt="Микола Тарасов" width="450">
+							</picture>
 							<h3 class="team__names">Микола Тарасов</h3>
 							<p class="team__position" lang="en">Marketing</p>
 							<ul class="team__soc-list">
@@ -272,7 +349,18 @@
 					</li>
 					<li class="team__addlist">
 						<div class="team__item">
-							<img class="team__photo" src="./images/img4.jpg" alt="Михайло Єрмаков" width="270">
+							<picture>
+								<source
+									srcset="./images/Ermakov.jpg 1x, ./images/Ermakov-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/Ermakov-tab.jpg 1x, ./images/Ermakov-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/Ermakov-tel.jpg 1x,./images/Ermakov-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img class="team__photo" src="./images/Ermakov-tel-2x.jpg" alt="Михайло Єрмаков" width="450">
+							</picture>
 							<h3 class="team__names">Михайло Єрмаков</h3>
 							<p class="team__position" lang="en">UI Designer</p>
 							<ul class="team__soc-list">
@@ -491,5 +579,6 @@
 		</div>
 	</div>
 	<script src="./js/modal.js"></script>
+	<script src="./js/menu.js"></script>
 </body>
 </html>
