--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,20 @@
                 <ul class="portfolio__images list">
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio1.jpg 1x, ./images/portfolio1-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio1-tab.jpg 1x, ./images/portfolio1-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio1-tel.jpg 1x,./images/portfolio1-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio1-2x.jpg" alt="Технокряк" width="450">
+							</picture>                                
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                         <div class="portfolio__border">
@@ -87,7 +100,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio2.jpg 1x, ./images/portfolio2-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio2-tab.jpg 1x, ./images/portfolio2-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio2-tel.jpg 1x,./images/portfolio2-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio2-2x.jpg" alt="Постер New Orlean vs Golden Star" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                         <div class="portfolio__border">
@@ -97,7 +123,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio3.jpg 1x, ./images/portfolio3-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio3-tab.jpg 1x, ./images/portfolio3-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio3-tel.jpg 1x,./images/portfolio3-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio3-2x.jpg" alt="Ресторан Seafood" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -107,7 +146,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio4.jpg" alt="Проєкт Prime" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio4.jpg 1x, ./images/portfolio4-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio4-tab.jpg 1x, ./images/portfolio4-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio4-tel.jpg 1x,./images/portfolio4-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio4-2x.jpg" alt="Проєкт Prime" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -117,7 +169,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio5.jpg" alt="Проєкт Boxes" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio5.jpg 1x, ./images/portfolio5-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio5-tab.jpg 1x, ./images/portfolio5-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio5-tel.jpg 1x,./images/portfolio5-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio5-2x.jpg" alt="Проєкт Boxes" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -127,7 +192,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio6.jpg 1x, ./images/portfolio6-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio6-tab.jpg 1x, ./images/portfolio6-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio6-tel.jpg 1x,./images/portfolio6-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio6-2x.jpg" alt="Inspiration has no Borders" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -137,7 +215,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio7.jpg" alt="Видання Limited Edition" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio7.jpg 1x, ./images/portfolio7-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio7-tab.jpg 1x, ./images/portfolio7-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio7-tel.jpg 1x,./images/portfolio7-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio7-2x.jpg" alt="Видання Limited Edition" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -147,7 +238,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio8.jpg" alt="Проєкт LAB" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio8.jpg 1x, ./images/portfolio8-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio8-tab.jpg 1x, ./images/portfolio8-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio8-tel.jpg 1x,./images/portfolio8-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio8-2x.jpg" alt="Проєкт LAB" width="450">
+							</picture>  
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
@@ -157,7 +261,20 @@
                     </li>
                     <li class="portfolio__addlist">
                         <div class="portfolio__overlay">
-                            <a class="portfolio__link" href=""><img src="./images/portfolio9.jpg" alt="Growing Business" width="370" height="294"></a>
+                            <a class="portfolio__link" href="">
+							<picture>
+								<source
+									srcset="./images/portfolio9.jpg 1x, ./images/portfolio9-2x.jpg 2x"
+									media="(min-width: 1200px)"/>
+								<source
+									srcset="./images/portfolio9-tab.jpg 1x, ./images/portfolio9-tab-2x.jpg 2x"
+									media="(min-width: 768px)"/>
+								<source
+									srcset="./images/portfolio9-tel.jpg 1x,./images/portfolio9-tel-2x.jpg 2x"
+									media="(max-width: 767px)"/>
+								<img src="./images/portfolio9-2x.jpg" alt="Growing Business" width="450">
+							</picture>
+                            </a>
                             <p class="portfolio__addtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                             <div class="portfolio__border">
