ДЗ 8 на проверку

--- a/index.html
+++ b/index.html
@@ -575,10 +575,9 @@
 			</div>
 			<button class="callback-btn" type="submit">Відправити
 			</button>
-
 		</div>
 	</div>
 	<script src="./js/modal.js"></script>
-	<script src="./js/menu.js"></script>
+	<script src="./js/mobile-menu.js"></script>
 </body>
 </html>
