--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,58 @@
 				</li>
 			</ul>
 		</div>
+		<div class="menu-open" data-menu-open>
+			<svg class="icon-menu_24px" width="24" height="16">
+				<use href="./images/symbol-defs.svg#icon-menu_24px">
+				</use>
+			</svg>
+		</div >
+		<div class="menu-close is-hidden" data-menu>
+			<div class="menu-close__btn" data-menu-close>
+					<svg class="icon-close_24px" width="24" height="16">
+						<use href="./images/symbol-defs.svg#icon-close_24px">
+						</use>
+					</svg>
+			</div >
+			<div class="menu-close__container">
+				<ul class="menu-close__list list">
+						<li class="menu-close__list-item">
+							<a class="menu-close__link link menu-close__current-page" href="./index.html">Студія</a>
+						</li>
+						<li class="menu-close__list-item">
+							<a class="menu-close__link link" href="./portfolio.html">Портфоліо</a>   
+						</li>
+						<li  class="menu-close__list-item">
+							<a class="menu-close__link link" href="">Контакти</a>    
+						</li>
+					</ul>
+				</nav>
+				<ul class="menu-close__contact-list list">
+					<li class="menu-close__contact-items">
+						<a class="menu-close__link-tel link" href="tel:+380961111111">+38 096 111 11 11
+						</a>
+					</li>
+					<li class="menu-close__contact-items">
+						<a class="menu-close__link-email link" href="mailto:info@devstudio.com">info@devstudio.com
+						</a>
+					</li>
+				</ul>
+				<ul class="menu-close__soc-list">
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Instagram</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Twitter</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">Facebook</a>
+					</li>
+					<li class="menu-close__item">
+						<a class="menu-close__soc link" href="">LinkedIn</a>
+					</li>
+				</ul>
+			</di >
+		</div >
 	</header>
     <main>
         <section class="portfolio">
@@ -286,7 +338,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+	<footer class="footer">
 		<div class="footer__container container">
 			<div class="footer__contact">
 				<a class="footer__logo link" href="/"><span class="footer__logo-span">Web</span>Studio</a>
@@ -339,7 +391,7 @@
 				<p class="subscription__title">Підпишіться на розсилку</p>
 				<form class="subscription__form" name="subscription-form" autocomplete="on">
 					<label for="subscription-email">
-						<input class="subscription__input" type="email" name="email" placeholder="E-mail" id="subscription-email"/>
+						<div class="subscription-email"><input class="subscription__input" type="email" name="email" placeholder="E-mail" id="subscription-email"/></div >
 					</label>
 					<button class="subscription__btn" type="submit">Підписатися
 						<svg class="icon-send" width="24" height="24">
@@ -351,5 +403,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="./js/mobile-menu.js"></script>
 </body>
 </html>
